# football-lineup-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP_API.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  test-api.html  test.html
.github/workflows/: ci.yml  codeql.yml  deploy.yml
backend/: .env.example  alembic.ini  quick_test.py  test_api_integration.py  test_output_arsenal.json
backend/alembic/: env.py
backend/alembic/versions/: 4a7b001c1c5e_initial_migration_with_users_and_.py
backend/app/: __init__.py  cli.py  database.py  main.py  settings.py
backend/app/adapters/: __init__.py  football_api.py
backend/app/auth/: __init__.py  api_key.py  dependencies.py
backend/app/bot/: __init__.py  bot.py  handlers.py  setup.py
backend/app/exceptions/: __init__.py  api.py  base.py  business.py  system.py
backend/app/middleware/: logging.py  rate_limiting.py
backend/app/models/: database.py  prediction.py
backend/app/repositories/: prediction.py  user.py
backend/tests/: test_auth_integration.py  test_authentication.py  test_bot.py  test_bot_handlers.py  test_cache.py  test_cache_factory.py  test_database.py  test_error_handling.py  test_football_api_simple.py  test_health.py  test_input_validation.py  test_logging_integration.py  test_logging_middleware.py  test_main.py  test_performance_logging.py  test_predict.py  test_prediction_service.py  test_rate_limiting.py  test_redis_cache.py  test_ruff.py  test_settings.py  test_telegram_webhook.py  test_webhook_security.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: test.html
frontend/src/: App.tsx  index.css
(+40 files in other folders)
